2003-09-04  Matthias Clasen  <maclas@gmx.de>

	* tests/testmerge.c: Test buttons and toggle buttons as proxies.

	* gtk/gtktoggleaction.c (connect_proxy): 
	(gtk_toggle_action_real_toggled): Support toggle buttons as proxies. Note 
	that a "draw_as_radio" property is needed for check buttons similar to 
	check menu items, in order to fully support button proxies for radio actions.

	* gtk/gtkaction.c (connect_proxy): Allow buttons as proxies.

	* tests/testmerge.c (toggle_dynamic): Test gtk_ui_manager_add_ui(). 

	* gtk/gtkuimanager.h: Add GtkUIManagerItemType enum which is needed for the
	'type' argument of gtk_ui_manager_add_ui().

	* gtk/gtkuimanager.[hc] (gtk_ui_manager_add_ui): Add 'type' and 'top' arguments
	to make this function as powerful as the XML methods of adding UI.  (#120647)

Thu Sep  4 19:11:23 2003  Kristian Rietveld  <kris@gtk.org>

	Merge from stable.

	* docs/RELEASE-HOWTO: updates.

2003-09-04  Matthias Clasen  <maclas@gmx.de>

	* tests/merge-2.ui: Use "position" instead of "pos".

	* gtk/gtkuimanager.c (start_element_handler): No need 
	to be terse: Change the name of the "pos" attribute
	to "position".

2003-09-04  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkuimanager.c: Un-prefix GtkUIManagerNodeType and 
	GtkUIManagerNode to shorten the names and to make the
	GTK_UI_MANAGER_<TYPE> names available for a public enum.

	* gtk/gtkactiongroup.c:
	* gtk/gtkuimanager.c: Various doc tweaks.	

	* gtk/gtkuimanager.c (start_element_handler):
	(end_element_handler): Improve error reporting. 

Wed Sep  3 23:18:17 2003  Kristian Rietveld  <kris@gtk.org>

	Merge from stable.

	* gtk/gtkmenu.c (gtk_menu_real_move_scroll): for the END case,
	use end_position - page_size instead of G_MAXINT, since
	gtk_menu_scroll_to doesn't CLAMP anymore internally. (Fixes #121237,
	reported by Havoc Pennington).

Wed Sep  3 21:58:03 2003  Kristian Rietveld  <kris@gtk.org>

	Merge from stable.

	* gtk/gtkiconfactory.c (cached_icon_free): if icon->style != NULL,